<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_space_foreground"
    android:orientation="vertical"
    tools:context=".ui.mainMenu.MainActivity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout

        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#CD1976D2"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/what_do_you_want_to_search"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/bt_neows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/near_asteroids" />

        <Button
            android:id="@+id/bt_searchrover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photos_mars_rover" />

        <Button
            android:id="@+id/bt_nasagallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/images_in_nasa_gallery" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>